<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GenKey</string>
    <string name="title_section1">Create</string>
    <string name="title_section2">Read</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_new">New file</string>
    <string name="action_open">Open file</string>
    <string name="title_openDialog">Open file</string>
    <string name="button_ok">Ok</string>
    <string name="button_cancel">Cancel</string>
    <string name="message_newDialog">Your old file will be deleted! This action can not be undone.</string>
    <string name="action_extract">Extract file</string>

</resources>
