<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item 
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new"
        android:title="@string/action_new"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open"
        android:title="@string/action_open"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_extract"
        android:title="@string/action_extract"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
